fix subheader overflow

--- a/app/game.component.css
+++ b/app/game.component.css
@@ -29,4 +29,5 @@ li {
 #subheader {
   background-color: #4a90e2;
   color: white;
+  overflow: hidden;
 }
